# simple-gona-stake

contract/: Cargo.toml
contract/deploy-scripts/: Cargo.toml
contract/deploy-scripts/src/: main.rs
contract/src/: lib.rs  types.rs
contract/tests/: tests.rs
contract/tests/chaperone/: module.wasm.v1
contract/tests/cis2_token/: module.wasm.v1
