# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "gona_stake"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Donatus Prince <donatusprinc@.com>"]

[features]
default = ["std"]
std = ["concordium-std/std"]
bump_alloc = ["concordium-std/bump_alloc"]

[dependencies]
concordium-std = { version = "10.0", default-features = false }
concordium-cis2 = {version = "6.1.0", features = ["u256_amount"]}
serde = { version = "1.0", optional = true, default-features = false, features = [
    "derive",
] }

[dev-dependencies]
concordium-smart-contract-testing = "4.2"
concordium-std-derive = "6.0"
primitive-types = {version= "0.11.1", default-features = false}
rand = "0.8"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[profile.release]
opt-level = "s"
codegen-units = 1

